# tp-ghcli

./: .flake8  .gitignore  Makefile  pyproject.toml
ghcli/: __init__.py  api.py  cli.py
tests/: test_api.py
